--- a/luci-app-openclash/files/usr/share/openclash/dashboard/index.html
+++ b/luci-app-openclash/files/usr/share/openclash/dashboard/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Clash Dashboard</title>
-    <link href="main.7fa6738617874ea86872.css" rel="stylesheet"></head>
+        <title>Clash</title>
+    <link href="main.5b2a02b81ea75793d649.css" rel="stylesheet"></head>
     <body>
         <div id="root"></div>
-    <script type="text/javascript" src="js/1.bundle.7fa6738617874ea86872.min.js"></script><script type="text/javascript" src="js/bundle.7fa6738617874ea86872.min.js"></script></body>
+    <script type="text/javascript" src="js/1.bundle.5b2a02b81ea75793d649.min.js"></script><script type="text/javascript" src="js/bundle.5b2a02b81ea75793d649.min.js"></script></body>
 </html>
