--- a/luci-app-openclash/files/usr/share/openclash/web/index.html
+++ b/luci-app-openclash/files/usr/share/openclash/web/index.html
@@ -7,33 +7,36 @@
   <link rel="icon" type="image/png" sizes="128x128" href="yacd-128.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name=viewport content="width=device-width, initial-scale=1">
-  <meta name="application-name" content="Clash Dashboard">
-  <meta name="description" content="Clash Dashboard">
+  <meta name="application-name" content="yacd">
+  <meta name="description" content="Yet Another Clash Dashboard">
   <meta name="theme-color" content="#202020">
-  <title>Clash Dashboard</title>
+  <title>yacd - Yet Another Clash Dashboard</title>
   <link rel="prefetch" href="https://cdn.jsdelivr.net/npm/@hsjs/fonts@0.0.1/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq3-cXbKD.woff2">
+  <link rel="prefetch" href="https://fonts.loli.net/css?family=Merriweather+Sans:400,700&display=swap" rel="stylesheet">
   <meta property="og:image" content="https://user-images.githubusercontent.com/1166872/47304841-536f3d80-d65a-11e8-8908-1917127dafc5.png">
   <meta property="og:site_name" content="yacd">
   <meta property="og:type" content="object">
-  <meta property="og:description" content="Clash Dashboard">
+  <meta property="og:title" content="yacd">
+  <meta property="og:url" content="http://yacd.haishan.me">
+  <meta property="og:description" content="Yet Another Clash Dashboard">
 
   
-  <link href="vendors~app.31d7bcb28b9aaba65968.css" rel="stylesheet">
+  <link href="vendors~app.d9456ae76caf40048d81.css" rel="stylesheet">
   
-  <link href="app.0a46527a296fe87c6f7a.css" rel="stylesheet">
+  <link href="app.f67abd23e208313e6c3b.css" rel="stylesheet">
   
 
 <body>
   <div id="app"></div>
 
   
-  <script src="runtime~app.ebef38faf2aa388ee472.js" type="text/javascript"></script>
+  <script src="runtime~app.63f45b4f240bb4f4dc13.js" type="text/javascript"></script>
   
-  <script src="react~app.2889399d0f29b961e8c2.js" type="text/javascript"></script>
+  <script src="react~app.4efc719f6b58a1148456.js" type="text/javascript"></script>
   
-  <script src="vendors~app.3aefabaae8e43cd5bd7f.js" type="text/javascript"></script>
+  <script src="vendors~app.dcb90fc935ec90dcec86.js" type="text/javascript"></script>
   
-  <script src="app.9b891454b1d74a441519.js" type="text/javascript"></script>
+  <script src="app.04a555b6fd1545eff8ed.js" type="text/javascript"></script>
   
 
 </body>
