--- a/luci-app-openclash/files/usr/share/openclash/web/index.html
+++ b/luci-app-openclash/files/usr/share/openclash/web/index.html
@@ -21,22 +21,20 @@
   <meta property="og:description" content="Yet Another Clash Dashboard">
 
   
-  <link href="vendors~app.d9456ae76caf40048d81.css" rel="stylesheet">
-  
-  <link href="app.f67abd23e208313e6c3b.css" rel="stylesheet">
+  <link href="app.5a1265735d78e67da9fe.css" rel="stylesheet">
   
 
 <body>
   <div id="app"></div>
 
   
-  <script src="runtime~app.63f45b4f240bb4f4dc13.js" type="text/javascript"></script>
+  <script src="runtime~app.dc7b6d94c7fe054b4bce.js" type="text/javascript"></script>
   
-  <script src="react~app.4efc719f6b58a1148456.js" type="text/javascript"></script>
+  <script src="core-js~app.b0e192aa2040bbc66d02.js" type="text/javascript"></script>
   
-  <script src="vendors~app.dcb90fc935ec90dcec86.js" type="text/javascript"></script>
+  <script src="react~app.6097406f382313d294e3.js" type="text/javascript"></script>
   
-  <script src="app.04a555b6fd1545eff8ed.js" type="text/javascript"></script>
+  <script src="app.6cc7f04cc66718dd2c90.js" type="text/javascript"></script>
   
 
 </body>
